--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <main>
         <div class="container">
-            
+            <h2>Premi PLAY per giocare!</h2>
         </div>
     </main>
 
