--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         <div class="container">
             <h2>Scegli la difficoltà e poi premi PLAY per giocare!</h2>
         </div>
+        <div id="fine-gioco">
+        </div>
     </main>
 
     <footer>
